Fix #4 : Left panel is now displayed properly on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -242,3 +242,19 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+object {
+	width: 100%;
+	display: block;
+	height: auto;
+	position: relative;
+	padding-top: 100%;
+}
+
+svg {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
